--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "isbot": "^4.1.0",
-    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-toastify": "^10.0.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
